partir pedra com cleanups

--- a/tsi.conf
+++ b/tsi.conf
@@ -271,8 +271,8 @@ NDMIN   = 1        # Minimum number of original data that should be used to simu
 NDMAX   = 64       # Maximum number of original data that should be used to simulate a node
 NODMAX  = 12       # Maximum number of previouly simulated nodes to be used to simulate a new node
 SSTRAT  = 1        # Two-part search / data nodes flag 
-MULTS   = 1        # Multiple grid simulation flag 
-NMULTS  = 1        # Number of multiple grid refinements 
+MULTS   = 1  # NOT USED ANYMORE      # Multiple grid simulation flag 
+NMULTS  = 1  # NOT USED ANYMORE      # Number of multiple grid refinements 
 NOCT    = 0        # Number of original data to use per octant
 RADIUS  = 1000     # Search radii in the maximum horizontal direction 
 RADIUS1 = 1000     # Search radii in the minimum horizontal direction
