partir pedra, dia 3...

--- a/tsi.conf
+++ b/tsi.conf
@@ -216,13 +216,13 @@ LAYER_SIZE_MIN = 30
 [HARDDATA]
 #PATH =
 FILENAME = Wells.prn                       # Hard Data file 
-NVARI    = 4                               # Number of columns in the data file (to eliminate)
-IXL      = 1                               # Column number of X coordinate
-IYL      = 2                               # Column number of Y coordinate
-IZL      = 3                               # Column number of Z coordinate
-IVRL     = 4                               # Column number of variable to be simulated
-IWT      = 0                               # Column number of the declustering weight
-ISECVR   = 0                               # Column number of the secondary variable 
+#NOT USED ANYMORE NVARI    = 4             # Number of columns in the data file (to eliminate)
+#NOT USED ANYMORE IXL      = 1             # Column number of X coordinate
+#NOT USED ANYMORE IYL      = 2             # Column number of Y coordinate
+#NOT USED ANYMORE IZL      = 3             # Column number of Z coordinate
+#NOT USED ANYMORE IVRL     = 4             # Column number of variable to be simulated
+#NOT USED ANYMORE IWT      = 0             # Column number of the declustering weight
+#NOT USED ANYMORE ISECVR   = 0             # Column number of the secondary variable 
 TMIN     = 1879.2991                       # Minimun threshold value 
 TMAX     = 5275.4864                       # Maximun threshold value 
 
