Backed out changeset 9f981d5162fc

--- a/tsi.conf
+++ b/tsi.conf
@@ -246,8 +246,8 @@ UTPAR   = 5275.4864     # Parameter for the utail=2
 
 [QUALITY]
 NTRY   = 3     # Number of simulation for bias correction 
-# NOT USED ANYMORE ICVAR  = 1     # Variance correction flag 
-# NOT USED ANYMORE ICMEAN = 1     # Average correction flag 
+ICVAR  = 1     # Variance correction flag 
+ICMEAN = 1     # Average correction flag 
 
 
 ##### Grid Parameters #####
@@ -270,10 +270,10 @@ NULL_VALUE = -99999.25                      # Null value (NOSVALUE)
 NDMIN   = 1        # Minimum number of original data that should be used to simulate a node
 NDMAX   = 64       # Maximum number of original data that should be used to simulate a node
 NODMAX  = 12       # Maximum number of previouly simulated nodes to be used to simulate a new node
-# NOT USED ANYMORE SSTRAT  = 1        # Two-part search / data nodes flag 
-# NOT USED ANYMORE MULTS   = 1  # Multiple grid simulation flag 
-# NOT USED ANYMORE NMULTS  = 1  # Number of multiple grid refinements 
-# NOT USED ANYMORE NOCT    = 0  # Number of original data to use per octant
+SSTRAT  = 1        # Two-part search / data nodes flag 
+MULTS   = 1  # NOT USED ANYMORE      # Multiple grid simulation flag 
+NMULTS  = 1  # NOT USED ANYMORE      # Number of multiple grid refinements 
+NOCT    = 0        # Number of original data to use per octant
 RADIUS  = 1000     # Search radii in the maximum horizontal direction 
 RADIUS1 = 1000     # Search radii in the minimum horizontal direction
 RADIUS2 = 1000     # Search radii in the vertical direction
@@ -285,18 +285,18 @@ SANG3   = 0        # Orientation angle parameter of direction III (degrees)
 ##### Kriging Parameters #####
 
 [KRIG]
-# NOT USED ANYMORE TYPE = 1         # this should indicate the type of co-krig
+TYPE = 1         # Kriging type ;0=simple,1=ordinary,2=simple with locally varying mean,3=external drif,
                  # 4=collo-cokrig global CC,5=local CC (KTYPE)
-# NOT USED ANYMORE COLOCORR = 0     # Global CC to ktype=4 
-# NOT USED ANYMORE VARRED   = 0.6   # Variance reduction factor to ktype=4,5
+COLOCORR = 0     # Global CC to ktype=4 
+VARRED   = 0.6   # Variance reduction factor to ktype=4,5
 
 
 
 ##### Soft Data Parameters #####
 
 [SOFT]
-# NOT USED ANYMORE NVARIL  = 1     # Number of columns in the secundary data file
-# NOT USED ANYMORE ICOLLVM = 1     # Column number of secundary variable 
+NVARIL  = 1     # Number of columns in the secundary data file
+ICOLLVM = 1     # Column number of secundary variable 
 
 
 
