--- a/tsi.conf
+++ b/tsi.conf
@@ -267,9 +267,9 @@ NULL_VALUE = -99999.25                      # Null value (NOSVALUE)
 ##### Search Parameters #####
 
 [SEARCH]
-NDMIN   = 1        # Minimum number of original data that should be used to simulate a node
-NDMAX   = 64       # Maximum number of original data that should be used to simulate a node
-NODMAX  = 12       # Maximum number of previouly simulated nodes to be used to simulate a new node
+NDMIN   = 1        # Min number of original data used to simulate a node
+NDMAX   = 64       # Max number of original data used to simulate a node
+NODMAX  = 12       # Max number of previouly simulated nodes used to simulate a new node
 SSTRAT  = 1        # Two-part search / data nodes flag 
 MULTS   = 1  # NOT USED ANYMORE      # Multiple grid simulation flag 
 NMULTS  = 1  # NOT USED ANYMORE      # Number of multiple grid refinements 
