work in progress on RESUME

--- a/tsi.conf
+++ b/tsi.conf
@@ -164,11 +164,12 @@ FILE_TYPE = gslib
 
 DUMP_DOUBLE_VALUE_FORMAT = %.4Lf\\n     # Format of values to write
 
-[INIT]
+[RESUME]
 # Values to initialize new BAI and new BCM at the beginning of a new
 # iteration???
-BAI = 0
-BCM = -2
+ENABLE = 1
+BAI = bai_file.txt
+BCM = bcm_file.txt
 
 
 ########################################################################
