--- a/tsi.conf
+++ b/tsi.conf
@@ -60,8 +60,8 @@ RESULT_TYPE = gslib
 RESUME = 1
 ########################################################################
 [RESUME]
-BAI = bai_file.txt
-BCM = bcm_file.txt
+BAI = BAI_0.tsi
+BCM = BCM_0.tsi
 
 ########################################################################
 [HEAP]
