remove inlines, minor fixes

--- a/tsi.conf
+++ b/tsi.conf
@@ -8,12 +8,12 @@
 # The global parameter ITERATIONS sets the number of iterations the TSI.
 # A higher number yields a higher correlation result. There's no default
 # value. This is a mandatory parameter.
-ITERATIONS = 2
+ITERATIONS = 4
 
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
 # correlation result. This is a mandatory parameter.
-SIMULATIONS = 2
+SIMULATIONS = 20
 
 # The global flag VERBOSE controls the output of messages to the standard
 # output device. The default value is 0 (false).
@@ -57,7 +57,7 @@ RESULT_TYPE = gslib
 # The RESUME option will make TSI to skip iteration 0 and start 
 # from iteration 1, using the supplied grids has the starting BAI and BCM 
 # to enable resume, set this to 1
-RESUME = 1
+RESUME = 0
 ########################################################################
 [RESUME]
 BAI = BAI_3.tsi
@@ -78,12 +78,12 @@ BCM = BCM_4.tsi
 USEFS = 1
 
 # The heap THRESHOLD parameter sets the number of grids to allocate before
-# attempting to swap any grid to disk. The default value is 8, the minimum
+# attempting to swap any grid to disk. The default value is 5, the minimum
 # number of grids needed in memory by TSI. If the value is set to 0, the
 # heap will only allocate more space when it's needed. If the value is set
 # to the heap SIZE, no swapping will occur (same as USEFS = 0). Higher values
 # yield less swapping.
-THRESHOLD = 8
+THRESHOLD = 5
 
 # The heap PATH parameters sets the path to the location where the swap
 # files will bw stored. The default value is "/tmp/".
@@ -151,8 +151,8 @@ FILE_TYPE = gslib
 # is 0 (false). Dump files have fixed file names related to the TSI execution
 # parameters with the following format:
 # [iteration].[simulation].[grid_type].tsi
-BAI   = 1            # Dump best acoustic impedance grid
-BCM   = 1            # Dump best correlations grid
+BAI   = 0            # Dump best acoustic impedance grid
+BCM   = 0            # Dump best correlations grid
 AI    = 0            # Dump acoustic impedance grid
 CORR  = 0            # Dump correlations grid
 SYNTH = 0            # Dump synthetic grid
@@ -186,7 +186,7 @@ DUMP_DOUBLE_VALUE_FORMAT = %.4Lf\\n     # Format of values to write
 #PATH =
 
 # The FILENAME parameter sets the name for the file with the wavelet data.
-FILENAME = Wavelet_MarlinSul_2005.prn
+FILENAME = Wavelet_MarlinSul_2005_sgems.prn
 
 # The USED_VALUES parameter sets the number of values to be used from the
 # wavelet data.
@@ -215,40 +215,14 @@ LAYER_SIZE_MIN = 20
 
 [HARDDATA]
 #PATH =
-FILENAME = pocos_AI_bended_geoms.prn       # Hard Data file 
-NVARI    = 4                               # Number of columns in the data file (to eliminate)
-IXL      = 1                               # Column number of X coordinate
-IYL      = 2                               # Column number of Y coordinate
-IZL      = 3                               # Column number of Z coordinate
-IVRL     = 4                               # Column number of variable to be simulated
-IWT      = 0                               # Column number of the declustering weight
-ISECVR   = 0                               # Column number of the secondary variable 
+FILENAME = pocos_AI_bended_geoms_SGEMS.prn       # Hard Data file 
 TMIN     = 3880.3121                       # Minimun threshold value 
 TMAX     = 14537.5830                      # Maximun threshold value 
 
 
-##### Hard Data Transformations #####
-
-[HDTRANS]
-ITRANS  = 1             # Variable trasformation flag
-ISMOOTH = 0             # Flag for histogram transformation with external file
-ISVR    = 1             # Column number of variable of external file 
-ISWT    = 2             # Column number of the declustering weight of external file
-ZMIN    = 3880.3121     # Minimum allowable data value 
-ZMAX    = 14537.5830    # Maximum allowable data value
-LTAIL   = 1             # Specify the back-transform implementation in the lower tail 
-LTPAR   = 3880.3121     # Parameter for the ltail=2 
-UTAIL   = 1             # Specify the back-transform implementation in the upper tail 
-UTPAR   = 14537.5830    # Parameter for the utail=2 
-
-
 ##### Simulations Quality #####
-
 [QUALITY]
 NTRY   = 3     # Number of simulation for bias correction 
-ICVAR  = 1     # Variance correction flag 
-ICMEAN = 1     # Average correction flag 
-
 
 ##### Grid Parameters #####
 
@@ -268,36 +242,15 @@ NULL_VALUE = -99999.25                      # Null value (NOSVALUE)
 
 [SEARCH]
 NDMIN   = 1        # Minimum number of original data that should be used to simulate a node
-NDMAX   = 64       # Maximum number of original data that should be used to simulate a node
 NODMAX  = 12       # Maximum number of previouly simulated nodes to be used to simulate a new node
-SSTRAT  = 1        # Two-part search / data nodes flag 
 MULTS   = 1        # Multiple grid simulation flag 
 NMULTS  = 1        # Number of multiple grid refinements 
-NOCT    = 0        # Number of original data to use per octant
 RADIUS  = 100     # Search radii in the maximum horizontal direction 
 RADIUS1 = 100     # Search radii in the minimum horizontal direction
 RADIUS2 = 100     # Search radii in the vertical direction
 SANG1   = 0       # Orientation angle parameter of direction I (degrees) 
 SANG2   = 0        # Orientation angle parameter of direction II (degrees) 
 SANG3   = 0        # Orientation angle parameter of direction III (degrees)
-
-
-##### Kriging Parameters #####
-
-[KRIG]
-TYPE = 1         # Kriging type ;0=simple,1=ordinary,2=simple with locally varying mean,3=external drif,
-                 # 4=collo-cokrig global CC,5=local CC (KTYPE)
-COLOCORR = 0     # Global CC to ktype=4 
-VARRED   = 0.6   # Variance reduction factor to ktype=4,5
-
-
-
-##### Soft Data Parameters #####
-
-[SOFT]
-NVARIL  = 1     # Number of columns in the secundary data file
-ICOLLVM = 1     # Column number of secundary variable 
-
 
 
 ##### Variogram Models #####
