new config file

--- a/tsi.conf
+++ b/tsi.conf
@@ -8,12 +8,12 @@
 # The global parameter ITERATIONS sets the number of iterations the TSI.
 # A higher number yields a higher correlation result. There's no default
 # value. This is a mandatory parameter.
-ITERATIONS = 4
+ITERATIONS = 1
 
 # The global parameter SIMULATIONS set the number o simulations that will
 # be executed for each iteration of the TSI. A higher number yields a higher
 # correlation result. This is a mandatory parameter.
-SIMULATIONS = 20
+SIMULATIONS = 1
 
 # The global flag VERBOSE controls the output of messages to the standard
 # output device. The default value is 0 (false).
@@ -26,8 +26,8 @@ VERBOSE = 1
 
 # The OPTIMIZE_LAST iteration parameter disables the selection and generation
 # of new best values since they are not needed. The default value is 1 (true).
-# Enabling the DUMP feature disables this optimization.
-OPTIMIZE_LAST = 1
+# Enabling the RESUME or DUMP features disables this optimization.
+OPTIMIZE_LAST = 0
 
 # The global INPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to search for files.
@@ -44,7 +44,7 @@ LOG_PATH = /home/data/MarlimSul/
 
 # The global RESULT_FILE parameter sets the filename to use for the best AI
 # grid generated. The default filename is "BestAI.tsi".
-#RESULT_FILE = 2005_AI.tsi
+RESULT_FILE = krig_AI.tsi
 
 # The global RESULT_TYPE parameter sets the format for the file with the
 # result grid. The default value is "gslib", a simple non-compressed ascii
@@ -54,21 +54,13 @@ LOG_PATH = /home/data/MarlimSul/
 # which reduzes the size to aproximately 1/3 of the gslib format.
 RESULT_TYPE = gslib
 
-# The RESUME option will make TSI to skip iteration 0 and start 
-# from iteration 1, using the supplied grids has the starting BAI and BCM 
-# to enable resume, set this to 1
-RESUME = 0
-########################################################################
-[RESUME]
-BAI = BAI_3.tsi
-BCM = BCM_4.tsi
 
-########################################################################
+
 [HEAP]
 # The heap SIZE parameter sets the number of grids that will be made
-# available for the TSI execution. The default value is 13, the current
+# available for the TSI execution. The default value is 10, the current
 # maximum number of grids that are needed.
-#SIZE = 13
+#SIZE = 10
 
 # The heap USEFS parameter is the flag that triggers swapping unused grids
 # to disk to save memory. The default value is 0 (false). If the program
@@ -83,7 +75,7 @@ USEFS = 1
 # heap will only allocate more space when it's needed. If the value is set
 # to the heap SIZE, no swapping will occur (same as USEFS = 0). Higher values
 # yield less swapping.
-THRESHOLD = 5
+THRESHOLD = 6
 
 # The heap PATH parameters sets the path to the location where the swap
 # files will bw stored. The default value is "/tmp/".
@@ -121,7 +113,6 @@ YCOORD = 3299      # Coordinate in Y axis of the first block (YMN)
 ZCOORD = 3088      # Coordinate in Z axis of the first block (ZMN)
 
 
-########################################################################
 [SEISMIC]
 # The PATH parameter sets the path that will be appended to the filename
 # of the seismic file. If no parameter is supplied, the global parameter
@@ -143,13 +134,16 @@ FILENAME = GSI_seismic_MarlimSul_bended_Topo_trimed.out
 FILE_TYPE = gslib
 
 ########################################################################
+########################################################################
 
 
 ##### Locations and names of files to dump #####
+
 [DUMP]
 # Flags for dumping temporary grid data during execution. The default value
-# is 0 (false). Dump files have fixed file names related to the TSI execution
-# parameters with the following format:
+# is 0 (false). If the RESUME flag is set to 1 (true) all dump flags will
+# be enabled automatically. Dump files have fixed file names related to the
+# TSI execution parameters with the following format:
 # [iteration].[simulation].[grid_type].tsi
 BAI   = 0            # Dump best acoustic impedance grid
 BCM   = 0            # Dump best correlations grid
@@ -169,6 +163,12 @@ SYNTH = 0            # Dump synthetic grid
 DUMP_TYPE = gslib
 
 DUMP_DOUBLE_VALUE_FORMAT = %.4Lf\\n     # Format of values to write
+
+[INIT]
+# Values to initialize new BAI and new BCM at the beginning of a new
+# iteration???
+BAI = 0
+BCM = -2
 
 
 ########################################################################
@@ -215,14 +215,16 @@ LAYER_SIZE_MIN = 20
 
 [HARDDATA]
 #PATH =
-FILENAME = pocos_AI_bended_geoms_SGEMS.prn       # Hard Data file 
+FILENAME = pocos_AI_bended_geoms_sgems.prn       # Hard Data file 
 TMIN     = 3880.3121                       # Minimun threshold value 
 TMAX     = 14537.5830                      # Maximun threshold value 
 
 
 ##### Simulations Quality #####
+
 [QUALITY]
 NTRY   = 3     # Number of simulation for bias correction 
+
 
 ##### Grid Parameters #####
 
@@ -312,9 +314,8 @@ OPTIMIZE = 0
 
 
 # The COLLECTIVE_COMPARE parameter enables the use of collective operations.
-# If disabled, the distributed COMPARE and selection of best results is done 
-# using point to point communication. 
-# Usually, collective operations provide higher performance. 
-# Default setting is 1 (true).
+# By default, the distributed COMPARE and selection of best results is done 
+# using point to point  communication. 
+# When optimized, collective operations can provide higher performance. 
+# Default setting is 1 (false).
 COLLECTIVE_COMPARE = 1
-
