--- a/tsi.conf
+++ b/tsi.conf
@@ -31,20 +31,20 @@ OPTIMIZE_LAST = 0
 
 # The global INPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to search for files.
-INPUT_PATH = /home/data/MarlimSul/
+INPUT_PATH = /data/MarlimSul/
 
 # The global OUTPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to write files.
-OUTPUT_PATH = /home/data/MarlimSul/
+OUTPUT_PATH = /data/MarlimSul/
 
 # The global LOG_PATH parameter sets the path for the log files. If no value
 # is supplied, the path in the OUTPUT_PATH parameter will be used to write
 # the logs.
-LOG_PATH = /home/data/MarlimSul/
+LOG_PATH = /data/MarlimSul/
 
 # The global RESULT_FILE parameter sets the filename to use for the best AI
 # grid generated. The default filename is "BestAI.tsi".
-RESULT_FILE = krig_AI.tsi
+RESULT_FILE = tsi6_AI.tsi
 
 # The global RESULT_TYPE parameter sets the format for the file with the
 # result grid. The default value is "gslib", a simple non-compressed ascii
@@ -54,6 +54,14 @@ RESULT_FILE = krig_AI.tsi
 # which reduzes the size to aproximately 1/3 of the gslib format.
 RESULT_TYPE = gslib
 
+# The RESUME option will make TSI to skip iteration 0 and start 
+# from iteration 1, using the supplied grids has the starting BAI and BCM 
+# to enable resume, set this to 1
+RESUME = 0
+########################################################################
+[RESUME]
+BAI = BAI_3.tsi
+BCM = BCM_4.tsi
 
 
 [HEAP]
@@ -79,7 +87,7 @@ THRESHOLD = 6
 
 # The heap PATH parameters sets the path to the location where the swap
 # files will bw stored. The default value is "/tmp/".
-TMP_PATH = /home/data/MarlimSul/
+TMP_PATH = /data/MarlimSul/
 
 
 
@@ -97,7 +105,7 @@ TMP_PATH = /home/data/MarlimSul/
 # bigTest
 XNUMBER = 681      # Number of blocks in X direction (NX)
 YNUMBER = 351      # Number of blocks in Y direction (NY)
-ZNUMBER = 153		   # Number of blocks in Z direction (NZ)
+ZNUMBER = 245		   # Number of blocks in Z direction (NZ)
 # giant
 #XNUMBER = 491      # Number of blocks in X direction (NX)
 #YNUMBER = 334      # Number of blocks in Y direction (NY)
@@ -110,7 +118,7 @@ ZNUMBER = 153		   # Number of blocks in Z direction (NZ)
 # bigTest
 XCOORD = 5781     # Coordinate in X axis of the first block (XMN)
 YCOORD = 3299      # Coordinate in Y axis of the first block (YMN)
-ZCOORD = 3088      # Coordinate in Z axis of the first block (ZMN)
+ZCOORD = 3276      # Coordinate in Z axis of the first block (ZMN)
 
 
 [SEISMIC]
@@ -121,12 +129,7 @@ ZCOORD = 3088      # Coordinate in Z axis of the first block (ZMN)
 
 # The FILENAME parameter sets the name for the file with the seismic
 # data.
-#FILENAME = seismic-bin-19x19x200.tsi
-#FILENAME = seismic-19x19x200.out
-#FILENAME = seismic-194x192x200.out
-#FILENAME = seismic-300x300x320.out
-FILENAME = GSI_seismic_MarlimSul_bended_Topo_trimed.out
-#FILENAME = seismic-491x334x552.out
+FILENAME = seismic_MarlimSul_bended_Topo_trimed_cortado_122_topo_122_upx4_int_sgems.out
 
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
 # The default value is "gslib". See GLOBAL:RESULT_TYPE for more options
@@ -164,12 +167,6 @@ DUMP_TYPE = gslib
 
 DUMP_DOUBLE_VALUE_FORMAT = %.4Lf\\n     # Format of values to write
 
-[INIT]
-# Values to initialize new BAI and new BCM at the beginning of a new
-# iteration???
-BAI = 0
-BCM = -2
-
 
 ########################################################################
 #                                                                      #
@@ -186,18 +183,18 @@ BCM = -2
 #PATH =
 
 # The FILENAME parameter sets the name for the file with the wavelet data.
-FILENAME = Wavelet_MarlinSul_2005_sgems.prn
+FILENAME = wavelet_1ms_gslib.prn
 
 # The USED_VALUES parameter sets the number of values to be used from the
 # wavelet data.
-USED_VALUES = 30    # Size of wavelet -1
+USED_VALUES = 120    # Size of wavelet -1
 
 
 [CORR]
 #Layers of variable size and number are used to calculate the correlations.
 # The parameter LAYERS_MIN set the minimum number of layers to use when
 # spliting a grid.
-LAYERS_MIN = 4
+LAYERS_MIN = 5
 
 # The parameter LAYERS_MIN sets the minimum number of points to be used
 # for a grid layer.
@@ -215,9 +212,9 @@ LAYER_SIZE_MIN = 20
 
 [HARDDATA]
 #PATH =
-FILENAME = pocos_AI_bended_geoms_sgems.prn       # Hard Data file 
-TMIN     = 3880.3121                       # Minimun threshold value 
-TMAX     = 14537.5830                      # Maximun threshold value 
+FILENAME = pocos_rodados_bended_cortados_upscaling_1ms_cortados_3276_tsi_gslib.prn  # Hard Data file 
+TMIN     = 4291.91                         # Minimun threshold value 
+TMAX     = 12849.2                         # Maximun threshold value 
 
 
 ##### Simulations Quality #####
@@ -247,8 +244,8 @@ NDMIN   = 1        # Minimum number of original data that should be used to simu
 NODMAX  = 12       # Maximum number of previouly simulated nodes to be used to simulate a new node
 MULTS   = 1        # Multiple grid simulation flag 
 NMULTS  = 1        # Number of multiple grid refinements 
-RADIUS  = 100     # Search radii in the maximum horizontal direction 
-RADIUS1 = 100     # Search radii in the minimum horizontal direction
+RADIUS  = 1000     # Search radii in the maximum horizontal direction 
+RADIUS1 = 1000     # Search radii in the minimum horizontal direction
 RADIUS2 = 100     # Search radii in the vertical direction
 SANG1   = 0       # Orientation angle parameter of direction I (degrees) 
 SANG2   = 0        # Orientation angle parameter of direction II (degrees) 
@@ -259,27 +256,27 @@ SANG3   = 0        # Orientation angle parameter of direction III (degrees)
 
 [VARIOGRAM]
 NUGGET = 0     # Nugget constant (C0(1))
-NUMBER = 2     # Number of semivariograms structures (NST(1))
+NUMBER = 1     # Number of semivariograms structures (NST(1))
 
 [VARIOGRAM1]
 TYPE = 1      # Struture type ;1=spherical,2=exponential,3=gaussian (IT(i))
-COV  = 0.4    # C parameter "COV + NUGGET = 1.0" (CC(i))
+COV  = 1      # C parameter "COV + NUGGET = 1.0" (CC(i))
 ANG1 = 0      # Geometric anisotropy angle I (ANG1(i))
 ANG2 = 0      # Geometric anisotropy angle II (ANG2(i))
 ANG3 = 0      # Geometric anisotropy angle III (ANG3(i))
-AA   = 16     # Maximum horizontal range (AA(i))
-AA1  = 16     # Minimum horizontal range (AA1) 
-AA2  = 4      # Vertical range (AA2) 
+AA   = 40     # Maximum horizontal range (AA(i))
+AA1  = 20     # Minimum horizontal range (AA1) 
+AA2  = 12     # Vertical range (AA2) 
 
-[VARIOGRAM2]
-TYPE= 1
-COV= 0.6
-ANG1= 90
-ANG2= 0
-ANG3= 0
-AA= 140
-AA1= 60
-AA2= 20
+#[VARIOGRAM2]
+#TYPE= 1
+#COV= 0.6
+#ANG1= 90
+#ANG2= 0
+#ANG3= 0
+#AA= 140
+#AA1= 60
+#AA2= 20
 
 #[VARIOGRAM3]
 #TYPE= "[1]COV + [2]COV + NUGGET = 1.0"
