remove TMIN and TMAX from config, use corrTest

--- a/tsi.conf
+++ b/tsi.conf
@@ -31,20 +31,20 @@ OPTIMIZE_LAST = 0
 
 # The global INPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to search for files.
-INPUT_PATH = /data/MarlimSul/
+INPUT_PATH = /home/miguel/code/CMRP/input/
 
 # The global OUTPUT_PATH parameter sets the path for input files. If no value
 # is supplied, the current path will be used to write files.
-OUTPUT_PATH = /data/MarlimSul/
+OUTPUT_PATH = /home/miguel/code/CMRP/output/
 
 # The global LOG_PATH parameter sets the path for the log files. If no value
 # is supplied, the path in the OUTPUT_PATH parameter will be used to write
 # the logs.
-LOG_PATH = /data/MarlimSul/
+LOG_PATH = /home/miguel/code/CMRP/logs/
 
 # The global RESULT_FILE parameter sets the filename to use for the best AI
 # grid generated. The default filename is "BestAI.tsi".
-RESULT_FILE = tsi6_AI.tsi
+RESULT_FILE = small-6.1_AI.tsi
 
 # The global RESULT_TYPE parameter sets the format for the file with the
 # result grid. The default value is "gslib", a simple non-compressed ascii
@@ -75,7 +75,7 @@ BCM = BCM_4.tsi
 # is being executed on a cluster, no local file system is needed for each
 # node. Although a local file system would yield the best performance, the
 # program can use any file system available to the cluster.
-USEFS = 1
+USEFS = 0
 
 # The heap THRESHOLD parameter sets the number of grids to allocate before
 # attempting to swap any grid to disk. The default value is 5, the minimum
@@ -87,7 +87,7 @@ THRESHOLD = 6
 
 # The heap PATH parameters sets the path to the location where the swap
 # files will bw stored. The default value is "/tmp/".
-TMP_PATH = /data/MarlimSul/
+TMP_PATH = /data/
 
 
 
@@ -99,26 +99,26 @@ TMP_PATH = /data/MarlimSul/
 #YNUMBER = 19      # Number of blocks in Y direction (NY)
 #ZNUMBER = 200     # Number of blocks in Z direction (NZ)
 # corrTest
-#XNUMBER = 194      # Number of blocks in X direction (NX)
-#YNUMBER = 192      # Number of blocks in Y direction (NY)
-#ZNUMBER = 200      # Number of blocks in Z direction (NZ)
+XNUMBER = 194      # Number of blocks in X direction (NX)
+YNUMBER = 192      # Number of blocks in Y direction (NY)
+ZNUMBER = 200      # Number of blocks in Z direction (NZ)
 # bigTest
-XNUMBER = 681      # Number of blocks in X direction (NX)
-YNUMBER = 351      # Number of blocks in Y direction (NY)
-ZNUMBER = 245		   # Number of blocks in Z direction (NZ)
+#XNUMBER = 681      # Number of blocks in X direction (NX)
+#YNUMBER = 351      # Number of blocks in Y direction (NY)
+#ZNUMBER = 245		   # Number of blocks in Z direction (NZ)
 # giant
 #XNUMBER = 491      # Number of blocks in X direction (NX)
 #YNUMBER = 334      # Number of blocks in Y direction (NY)
 #ZNUMBER = 552      # Number of blocks in Z direction (NZ)
 
 # smallTest/corrTest
-#XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
-#YCOORD = 4159      # Coordinate in Y axis of the first block (YMN)
-#ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
+XCOORD = 10403     # Coordinate in X axis of the first block (XMN)
+YCOORD = 4159      # Coordinate in Y axis of the first block (YMN)
+ZCOORD = 1418      # Coordinate in Z axis of the first block (ZMN)
 # bigTest
-XCOORD = 5781     # Coordinate in X axis of the first block (XMN)
-YCOORD = 3299      # Coordinate in Y axis of the first block (YMN)
-ZCOORD = 3276      # Coordinate in Z axis of the first block (ZMN)
+#XCOORD = 5781     # Coordinate in X axis of the first block (XMN)
+#YCOORD = 3299      # Coordinate in Y axis of the first block (YMN)
+#ZCOORD = 3276      # Coordinate in Z axis of the first block (ZMN)
 
 
 [SEISMIC]
@@ -129,7 +129,7 @@ ZCOORD = 3276      # Coordinate in Z axis of the first block (ZMN)
 
 # The FILENAME parameter sets the name for the file with the seismic
 # data.
-FILENAME = seismic_MarlimSul_bended_Topo_trimed_cortado_122_topo_122_upx4_int_sgems.out
+FILENAME = seismic-194x192x200.out
 
 # The FILE_TYPE parameter sets the file format of the file to be parsed.
 # The default value is "gslib". See GLOBAL:RESULT_TYPE for more options
@@ -183,11 +183,7 @@ DUMP_DOUBLE_VALUE_FORMAT = %.4Lf\\n     # Format of values to write
 #PATH =
 
 # The FILENAME parameter sets the name for the file with the wavelet data.
-FILENAME = wavelet_1ms_gslib.prn
-
-# The USED_VALUES parameter sets the number of values to be used from the
-# wavelet data.
-USED_VALUES = 120    # Size of wavelet -1
+FILENAME = Wavelet.prn
 
 
 [CORR]
@@ -212,10 +208,7 @@ LAYER_SIZE_MIN = 20
 
 [HARDDATA]
 #PATH =
-FILENAME = pocos_rodados_bended_cortados_upscaling_1ms_cortados_3276_tsi_gslib.prn  # Hard Data file 
-TMIN     = 4291.91                         # Minimun threshold value 
-TMAX     = 12849.2                         # Maximun threshold value 
-
+FILENAME = Wells.prn  # Hard Data file 
 
 ##### Simulations Quality #####
 
