--- a/.settings/org.eclipse.cdt.managedbuilder.core.prefs
+++ b/.settings/org.eclipse.cdt.managedbuilder.core.prefs
@@ -1,10 +1,10 @@
-#Tue Dec 04 21:25:12 GMT 2007
+#Wed May 20 00:37:39 GMT+01:00 2009
 cdt.managedbuild.config.gnu.exe.debug.775698319/internalBuilder/enabled=false
+environment/project=<?xml version\="1.0"?>\n<environment/>
+environment/buildEnvironmentInclude/cdt.managedbuild.config.gnu.exe.debug.775698319=<?xml version\="1.0" encoding\="UTF-8" standalone\="no"?>\n<environment>\n<variable name\="CPATH" operation\="remove"/>\n<variable name\="C_INCLUDE_PATH" operation\="remove"/>\n</environment>\n
+environment/project/cdt.managedbuild.config.gnu.exe.debug.775698319=<?xml version\="1.0"?>\n<environment/>
+cdt.managedbuild.config.gnu.exe.release.1374782014/internalBuilder/ignoreErr=true
 cdt.managedbuild.config.gnu.exe.debug.775698319/internalBuilder/ignoreErr=true
 cdt.managedbuild.config.gnu.exe.release.1374782014/internalBuilder/enabled=false
-cdt.managedbuild.config.gnu.exe.release.1374782014/internalBuilder/ignoreErr=true
-eclipse.preferences.version=1
-environment/buildEnvironmentInclude/cdt.managedbuild.config.gnu.exe.debug.775698319=<?xml version\="1.0" encoding\="UTF-8" standalone\="no"?>\n<environment>\n<variable name\="CPATH" operation\="remove"/>\n<variable name\="C_INCLUDE_PATH" operation\="remove"/>\n</environment>\n
 environment/buildEnvironmentLibrary/cdt.managedbuild.config.gnu.exe.debug.775698319=<?xml version\="1.0" encoding\="UTF-8" standalone\="no"?>\n<environment>\n<variable name\="LIBRARY_PATH" operation\="remove"/>\n</environment>\n
-environment/project=<?xml version\="1.0" encoding\="UTF-8" standalone\="no"?>\n<environment/>\n
-environment/project/cdt.managedbuild.config.gnu.exe.debug.775698319=<?xml version\="1.0" encoding\="UTF-8" standalone\="no"?>\n<environment/>\n
+eclipse.preferences.version=1
